Added second Jupyter notebook in tutorial

--- a/src/ipy/tutorial/s1a_get_pathway.ipynb
+++ b/src/ipy/tutorial/s1a_get_pathway.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Retrieve a Pathway based on its identifier\n",
+    "# Step 1a) Retrieve a Pathway based on its identifier\n",
     "Get the Pathway **\"Antigen processing-Cross presentation\"** with identifier **R-HSA-1236975**\n",
     "\n",
-    "[**Reactome Tutorial**: Retrieving objects](https://reactome.org/dev/graph-database/extract-participating-molecules#retrieving-objects)\n"
+    "[**Reactome Tutorial**: Retrieving a pathway object](https://reactome.org/dev/graph-database/extract-participating-molecules#retrieving-objects)\n"
    ]
   },
   {
