--- a/src/ipy/tutorial/s1a_get_pathway.ipynb
+++ b/src/ipy/tutorial/s1a_get_pathway.ipynb
@@ -16,6 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Connect to Neo4j\n",
     "from neo4j import GraphDatabase\n",
     "\n",
     "neo4j_url = 'bolt://localhost:7687'\n",
