--- a/src/ipy/tutorial/s4a_pathway_subpathways.ipynb
+++ b/src/ipy/tutorial/s4a_pathway_subpathways.ipynb
@@ -4,10 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 4a) Retrieving pathways, subpathways, and superpathways.\n",
+    "# Tutorial 4a) Retrieving pathways, subpathways, and superpathways.\n",
     "What sub-pathways are under under pathway, R-HSA-983169, _Class I MHC mediated antigen processing & presentation_?\n",
     "\n",
-    "[**Reactome Tutorial**: Retrieving pathways, subpathways and superpathways](https://reactome.org/dev/graph-database/extract-participating-molecules#retrieving-pathways)"
+    "[**Reactome Tutorial**: Retrieving pathways, subpathways and superpathways](https://reactome.org/dev/graph-database/extract-participating-molecules#retrieving-pathways)\n",
+    "\n",
+    "## Step 1) [Connect to Neo4j loaded with Reactome](https://github.com/dvklopfenstein/reactome_neo4j_py/blob/master/doc/md/README_gdbdr.md)"
    ]
   },
   {
@@ -30,7 +32,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## What sub-pathways are under under pathway, R-HSA-983169, _Class I MHC mediated antigen processing & presentation_?"
+    " ## Step 2) Query\n",
+    " ### What sub-pathways are under under pathway, R-HSA-983169, _Class I MHC mediated antigen processing & presentation_?"
    ]
   },
   {
