--- a/src/ipy/tutorial/s4a_pathway_subpathways.ipynb
+++ b/src/ipy/tutorial/s4a_pathway_subpathways.ipynb
@@ -59,11 +59,14 @@
     "         'p.stId AS Pathway, '\n",
     "         'sp.stId AS SubPathway_ID, '\n",
     "         'sp.displayName as SubPathway_Name')\n",
-    "    \n",
+    "\n",
+    "# Query and get data\n",
     "with gdbdr.session() as session:\n",
-    "    print('    Pathway      | SubPathway ID | SubPathway Name')\n",
-    "    print('-----------------|---------------|----------------')\n",
-    "    for rec in session.run(query).records():\n",
+    "    data = rec for rec in session.run(query).records()]\n",
+    "    \n",
+    "# Print sub-pathways under R-HSA-983169\n",
+    "print('    Pathway      | SubPathway ID | SubPathway Name')\n",
+    "print('-----------------|---------------|----------------')\n",
     "        print(\"    {PATHWAY} | {SUBPWY_ID:13} | {SUBPWY_NAME}\".format(\n",
     "            PATHWAY=rec['Pathway'],\n",
     "            SUBPWY_ID=rec['SubPathway_ID'],\n",
