Separted getting and printing data

--- a/src/ipy/tutorial/s4a_pathway_subpathways.ipynb
+++ b/src/ipy/tutorial/s4a_pathway_subpathways.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "neo4j_usr = 'neo4j'\n",
     "neo4j_password = 'myneo4j_password'\n",
     "\n",
-    "gdbdr = GraphDatabase.driver(neo4j_url, auth=(neo4j_usr, neo4j_password))"
+    "gdbdr = GraphDatabase.driver(neo4j_url, auth=(neo4j_usr, \"myneo4j_password\"))"
    ]
   },
   {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -61,16 +61,15 @@
     "         'sp.displayName as SubPathway_Name')\n",
     "\n",
     "# Query and get data\n",
-    "with gdbdr.session() as session:\n",
-    "    data = rec for rec in session.run(query).records()]\n",
+    "def _get_data():\n",
+    "    with gdbdr.session() as session:\n",
+    "        return [rec.data() for rec in session.run(query).records()]\n",
     "    \n",
     "# Print sub-pathways under R-HSA-983169\n",
     "print('    Pathway      | SubPathway ID | SubPathway Name')\n",
     "print('-----------------|---------------|----------------')\n",
-    "        print(\"    {PATHWAY} | {SUBPWY_ID:13} | {SUBPWY_NAME}\".format(\n",
-    "            PATHWAY=rec['Pathway'],\n",
-    "            SUBPWY_ID=rec['SubPathway_ID'],\n",
-    "            SUBPWY_NAME=rec['SubPathway_Name']))"
+    "for data in _get_data():\n",
+    "    print(\"    {Pathway} | {SubPathway_ID:13} | {SubPathway_Name}\".format(**data))"
    ]
   },
   {
