--- a/src/ipy/tutorial/s4a_pathway_subpathways.ipynb
+++ b/src/ipy/tutorial/s4a_pathway_subpathways.ipynb
@@ -25,7 +25,7 @@
     "neo4j_usr = 'neo4j'\n",
     "neo4j_password = 'myneo4j_password'\n",
     "\n",
-    "gdbdr = GraphDatabase.driver(neo4j_url, auth=(neo4j_usr, \"myneo4j_password\"))"
+    "gdbdr = GraphDatabase.driver(neo4j_url, auth=(neo4j_usr, myneo4j_password))"
    ]
   },
   {
@@ -60,7 +60,7 @@
     "         'sp.stId AS SubPathway_ID, '\n",
     "         'sp.displayName as SubPathway_Name')\n",
     "\n",
-    "# Query and get data\n",
+    "# Query and get the sub-pathways under R-HSA-983169\n",
     "def _get_data():\n",
     "    with gdbdr.session() as session:\n",
     "        return [rec.data() for rec in session.run(query).records()]\n",
@@ -69,7 +69,8 @@
     "print('    Pathway      | SubPathway ID | SubPathway Name')\n",
     "print('-----------------|---------------|----------------')\n",
     "for data in _get_data():\n",
-    "    print(\"    {Pathway} | {SubPathway_ID:13} | {SubPathway_Name}\".format(**data))"
+    "    print(\"    {Pathway} | {SubPathway_ID:13} | {SubPathway_Name}\".format(**data))",
+    "",
    ]
   },
   {
