--- a/src/ipy/tutorial/s4a_pathway_subpathways.ipynb
+++ b/src/ipy/tutorial/s4a_pathway_subpathways.ipynb
@@ -25,7 +25,7 @@
     "neo4j_usr = 'neo4j'\n",
     "neo4j_password = 'myneo4j_password'\n",
     "\n",
-    "gdbdr = GraphDatabase.driver(neo4j_url, auth=(neo4j_usr, myneo4j_password))"
+    "gdbdr = GraphDatabase.driver(neo4j_url, auth=(neo4j_usr, neo4j_password))"
    ]
   },
   {
