Added a couple more Jupyter notebooks

--- a/src/ipy/tutorial/s1a_get_pathway.ipynb
+++ b/src/ipy/tutorial/s1a_get_pathway.ipynb
@@ -4,10 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 1a) Retrieve a Pathway based on its identifier\n",
+    "# Tutorial 1a) Retrieve a Pathway based on its identifier\n",
     "Get the Pathway **\"Antigen processing-Cross presentation\"** with identifier **R-HSA-1236975**\n",
     "\n",
-    "[**Reactome Tutorial**: Retrieving a pathway object](https://reactome.org/dev/graph-database/extract-participating-molecules#retrieving-objects)\n"
+    "[**Reactome Tutorial**: Retrieving a pathway object](https://reactome.org/dev/graph-database/extract-participating-molecules#retrieving-objects)\n",
+    "\n",
+    "## Step 1) [Connect to Neo4j loaded with the Reactome Knowledgebase](https://github.com/dvklopfenstein/reactome_neo4j_py/blob/master/doc/md/README_gdbdr.md)"
    ]
   },
   {
@@ -24,6 +26,14 @@
     "neo4j_password = 'myneo4j_password'\n",
     "\n",
     "gdbdr = GraphDatabase.driver(neo4j_url, auth=(neo4j_usr, neo4j_password)) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ## Step 2) Query\n",
+    " ### Get the Pathway _Antigen processing-Cross presentation_ with identifier **R-HSA-1236975**"
    ]
   },
   {
