--- a/src/ipy/tutorial/s4a_pathway_subpathways.ipynb
+++ b/src/ipy/tutorial/s4a_pathway_subpathways.ipynb
@@ -9,12 +9,12 @@
     "\n",
     "[**Reactome Tutorial**: Retrieving pathways, subpathways and superpathways](https://reactome.org/dev/graph-database/extract-participating-molecules#retrieving-pathways)\n",
     "\n",
-    "## Step 1) [Connect to Neo4j loaded with Reactome](https://github.com/dvklopfenstein/reactome_neo4j_py/blob/master/doc/md/README_gdbdr.md)"
+    "## Step 1) [Connect to Neo4j loaded with the Reactome Knowledgebase](https://github.com/dvklopfenstein/reactome_neo4j_py/blob/master/doc/md/README_gdbdr.md)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -69,8 +69,7 @@
     "print('    Pathway      | SubPathway ID | SubPathway Name')\n",
     "print('-----------------|---------------|----------------')\n",
     "for data in _get_data():\n",
-    "    print(\"    {Pathway} | {SubPathway_ID:13} | {SubPathway_Name}\".format(**data))",
-    "\n"
+    "    print(\"    {Pathway} | {SubPathway_ID:13} | {SubPathway_Name}\".format(**data))\n"
    ]
   },
   {
