Added more jupyter tutorials

--- a/src/ipy/tutorial/s4a_pathway_subpathways.ipynb
+++ b/src/ipy/tutorial/s4a_pathway_subpathways.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial 4a) Retrieving pathways, subpathways, and superpathways.\n",
+    "# Tutorial 4a) Retrieving pathways and subpathways\n",
     "What sub-pathways are under under pathway, R-HSA-983169, _Class I MHC mediated antigen processing & presentation_?\n",
     "\n",
     "[**Reactome Tutorial**: Retrieving pathways, subpathways and superpathways](https://reactome.org/dev/graph-database/extract-participating-molecules#retrieving-pathways)\n",
