--- a/src/ipy/tutorial/s1a_get_pathway.ipynb
+++ b/src/ipy/tutorial/s1a_get_pathway.ipynb
@@ -68,6 +68,13 @@
     "        for key, val in rec['pathway'].items():\n",
     "            print(\"    {KEY:11} {VAL}\".format(KEY=key, VAL=val))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Copyright (C) 2018-2019, DV Klopfenstein. All rights reserved."
+   ]
   }
  ],
  "metadata": {
