--- a/src/ipy/tutorial/s3a_get_participants_complexes.ipynb
+++ b/src/ipy/tutorial/s3a_get_participants_complexes.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial 3a) Breaking down complexes and sets to get thier participants\n",
+    "# Tutorial 3a) Breaking down complexes to get thier participants\n",
     "\n",
     "[**Reactome Tutorial**: Breaking down complexes and sets to get thier participants](https://reactome.org/dev/graph-database/extract-participating-molecules#complexes-sets-participants)\n",
     "\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +31,12 @@
    "metadata": {},
    "source": [
     " ## Step 2) First Query\n",
-    " ###  Get the complexes directly below the complex, R-HSA-983126"
+    " ###  Get the complexes directly below the complex, R-HSA-983126 _Ag-substrate:E3:E2:Ub [cytosol]_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
    "source": [
     "## Step 3) Second Query\n",
     "\n",
-    "### Get all items at all levels of hierarchy inside the complex, R-HSA-983126"
+    "### Get all items at all levels of hierarchy inside the complex, R-HSA-983126,_Ag-substrate:E3:E2:Ub [cytosol]_"
    ]
   },
   {
