--- a/src/ipy/tutorial/s4b_pathway_superpathways.ipynb
+++ b/src/ipy/tutorial/s4b_pathway_superpathways.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "source": [
     " ## Step 3) Query\n",
-    " ### Retrieve all superpathways directly over pathway, R-HSA-983169, _Class I MHC mediated antigen processing & presentation_?"
+    " ### Retrieve all superpathways directly over pathway, R-HSA-983169, _Class I MHC mediated antigen processing & presentation_"
    ]
   },
   {
