--- a/src/ipy/tutorial/s6a_reaction_participants.ipynb
+++ b/src/ipy/tutorial/s6a_reaction_participants.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,18 +48,18 @@
      "text": [
       "     Reaction | Participant   | Participant Name\n",
       "--------------|---------------|----------------\n",
-      "R-HSA-8863895 | R-HSA-168113  | CHUK:IKBKB:IKBKG [cytosol]\n",
       "R-HSA-8863895 | R-ALL-113592  | ATP [cytosol]\n",
-      "R-HSA-8863895 | R-HSA-8863966 | SNAP23 [phagocytic vesicle membrane]\n",
-      "R-HSA-8863895 | R-HSA-8863923 | p-S95-SNAP23 [phagocytic vesicle membrane]\n",
       "R-HSA-8863895 | R-ALL-29370   | ADP [cytosol]\n",
+      "R-HSA-8863895 | R-HSA-168113  | CHUK:IKBKB:IKBKG [cytosol]\n",
+      "R-HSA-8863895 | R-HSA-8863923 | p-S95-SNAP23 [phagocytic vesicle membrane]\n",
+      "R-HSA-8863895 | R-HSA-8863966 | SNAP23 [phagocytic vesicle membrane]\n",
       "R-HSA-8863895 | R-HSA-937033  | oligo-MyD88:TIRAP:BTK:activated TLR [plasma membrane]\n"
      ]
     }
    ],
    "source": [
     "query = ('MATCH (r:ReactionLikeEvent{stId:\"R-HSA-8863895\"})'\n",
-    "         '-[:input|output|catalystActivity|physicalEntity|regulatedBy|regulator*]'\n",
+    "         '-[:input|output|catalystActivity|regulatedBy|physicalEntity|regulator*]'\n",
     "         '->(pe:PhysicalEntity)'\n",
     "         'RETURN DISTINCT r.stId AS Reaction, pe.stId as Participant, pe.displayName AS DisplayName')\n",
     "\n",
@@ -71,7 +71,7 @@
     "# Print sub-pathways under R-HSA-983169\n",
     "print('     Reaction | Participant   | Participant Name')\n",
     "print('--------------|---------------|----------------')\n",
-    "for data in _get_data():\n",
+    "for data in sorted(_get_data(), key=lambda r: r['Participant']):\n",
     "    print(\"{Reaction} | {Participant:13} | {DisplayName}\".format(**data))\n"
    ]
   },
