--- a/src/ipy/tutorial/s6b_reaction_participants.ipynb
+++ b/src/ipy/tutorial/s6b_reaction_participants.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -48,50 +48,50 @@
      "text": [
       "     Reaction | Participant   | Participant Name\n",
       "--------------|---------------|----------------\n",
-      "R-HSA-8863895 | R-HSA-168113  | CHUK:IKBKB:IKBKG [cytosol]\n",
-      "R-HSA-8863895 | R-HSA-168114  | IKBKB [cytosol]\n",
-      "R-HSA-8863895 | R-HSA-168104  | CHUK [cytosol]\n",
-      "R-HSA-8863895 | R-HSA-168108  | IKBKG [cytosol]\n",
-      "R-HSA-8863895 | R-ALL-113592  | ATP [cytosol]\n",
-      "R-HSA-8863895 | R-HSA-8863966 | SNAP23 [phagocytic vesicle membrane]\n",
-      "R-HSA-8863895 | R-HSA-8863923 | p-S95-SNAP23 [phagocytic vesicle membrane]\n",
       "R-HSA-8863895 | R-ALL-29370   | ADP [cytosol]\n",
-      "R-HSA-8863895 | R-HSA-937033  | oligo-MyD88:TIRAP:BTK:activated TLR [plasma membrane]\n",
-      "R-HSA-8863895 | R-HSA-937013  | MyD88 oligomer [plasma membrane]\n",
-      "R-HSA-8863895 | R-HSA-937017  | MYD88 [plasma membrane]\n",
-      "R-HSA-8863895 | R-HSA-2201325 | activated TLR2/4:p-4Y-TIRAP:PI(4,5)P2:BTK [plasma membrane]\n",
-      "R-HSA-8863895 | R-HSA-5365824 | p-4Y-TIRAP:PI(4,5)P2 [plasma membrane]\n",
+      "R-HSA-8863895 | R-ALL-113592  | ATP [cytosol]\n",
+      "R-HSA-8863895 | R-ALL-181161  | Clostridial peptidoglycan [extracellular region]\n",
+      "R-HSA-8863895 | R-ALL-181403  | Diacyl lipopeptide [extracellular region]\n",
+      "R-HSA-8863895 | R-ALL-166005  | LPS [extracellular region]\n",
+      "R-HSA-8863895 | R-ALL-181015  | Lipoteichoic acid [extracellular region]\n",
       "R-HSA-8863895 | R-ALL-179856  | PI(4,5)P2 [plasma membrane]\n",
-      "R-HSA-8863895 | R-HSA-2201321 | p-4Y-TIRAP [plasma membrane]\n",
-      "R-HSA-8863895 | R-HSA-181230  | Activated TLR1:2 or TLR 2:6 heterodimers or TLR4 homodimer [plasma membrane]\n",
-      "R-HSA-8863895 | R-HSA-181410  | TLR6:TLR2:ligand:CD14:CD36 [plasma membrane]\n",
-      "R-HSA-8863895 | R-HSA-2559461 | TLR6/2 ligand:CD14:CD36 [plasma membrane]\n",
+      "R-HSA-8863895 | R-ALL-180811  | Triacyl lipopeptide [extracellular region]\n",
       "R-HSA-8863895 | R-CTR-9628992 | TLR6:TLR2 recognized ligand [extracellular region]\n",
       "R-HSA-8863895 | R-CTR-9628834 | mip [extracellular region]\n",
-      "R-HSA-8863895 | R-ALL-181015  | Lipoteichoic acid [extracellular region]\n",
-      "R-HSA-8863895 | R-ALL-181403  | Diacyl lipopeptide [extracellular region]\n",
-      "R-HSA-8863895 | R-ALL-181161  | Clostridial peptidoglycan [extracellular region]\n",
-      "R-HSA-8863895 | R-HSA-166033  | GPIN-CD14(20-345) [plasma membrane]\n",
-      "R-HSA-8863895 | R-HSA-51645   | 4xPalmC-CD36 [plasma membrane]\n",
-      "R-HSA-8863895 | R-HSA-168949  | TLR6:TLR2 [plasma membrane]\n",
-      "R-HSA-8863895 | R-HSA-167992  | TLR2 [plasma membrane]\n",
-      "R-HSA-8863895 | R-HSA-168061  | TLR6 [plasma membrane]\n",
-      "R-HSA-8863895 | R-HSA-166850  | TLR4:LY96:LPS:CD14 [plasma membrane]\n",
-      "R-HSA-8863895 | R-HSA-166050  | TLR4:LY96 [plasma membrane]\n",
       "R-HSA-8863895 | R-HSA-166047  | 2xN4GlycoAsn-LY96 [plasma membrane]\n",
       "R-HSA-8863895 | R-HSA-166045  | 2xN4GlycoAsn-TLR4 [plasma membrane]\n",
-      "R-HSA-8863895 | R-ALL-166005  | LPS [extracellular region]\n",
+      "R-HSA-8863895 | R-HSA-51645   | 4xPalmC-CD36 [plasma membrane]\n",
+      "R-HSA-8863895 | R-HSA-181230  | Activated TLR1:2 or TLR 2:6 heterodimers or TLR4 homodimer [plasma membrane]\n",
+      "R-HSA-8863895 | R-HSA-197948  | BTK [cytosol]\n",
       "R-HSA-8863895 | R-HSA-166029  | CD14 [plasma membrane]\n",
       "R-HSA-8863895 | R-HSA-166025  | CD14(20-345) [extracellular region]\n",
-      "R-HSA-8863895 | R-HSA-181226  | TLR1:TLR2:TLR1/2 ligand:CD14 [plasma membrane]\n",
-      "R-HSA-8863895 | R-HSA-168946  | TLR1:TLR2 [plasma membrane]\n",
+      "R-HSA-8863895 | R-HSA-168104  | CHUK [cytosol]\n",
+      "R-HSA-8863895 | R-HSA-168113  | CHUK:IKBKB:IKBKG [cytosol]\n",
+      "R-HSA-8863895 | R-HSA-166033  | GPIN-CD14(20-345) [plasma membrane]\n",
+      "R-HSA-8863895 | R-HSA-168114  | IKBKB [cytosol]\n",
+      "R-HSA-8863895 | R-HSA-168108  | IKBKG [cytosol]\n",
+      "R-HSA-8863895 | R-HSA-937017  | MYD88 [plasma membrane]\n",
+      "R-HSA-8863895 | R-HSA-937013  | MyD88 oligomer [plasma membrane]\n",
+      "R-HSA-8863895 | R-HSA-8863966 | SNAP23 [phagocytic vesicle membrane]\n",
       "R-HSA-8863895 | R-HSA-6787702 | TLR1 [plasma membrane]\n",
+      "R-HSA-8863895 | R-HSA-168946  | TLR1:TLR2 [plasma membrane]\n",
       "R-HSA-8863895 | R-HSA-2559462 | TLR1:TLR2 ligand:CD14 [plasma membrane]\n",
-      "R-HSA-8863895 | R-NME-168944  | TLR1:TLR2 recognized ligand [extracellular region]\n",
-      "R-HSA-8863895 | R-NME-180817  | PorB Homotrimer [extracellular region]\n",
+      "R-HSA-8863895 | R-HSA-181226  | TLR1:TLR2:TLR1/2 ligand:CD14 [plasma membrane]\n",
+      "R-HSA-8863895 | R-HSA-167992  | TLR2 [plasma membrane]\n",
+      "R-HSA-8863895 | R-HSA-166050  | TLR4:LY96 [plasma membrane]\n",
+      "R-HSA-8863895 | R-HSA-166850  | TLR4:LY96:LPS:CD14 [plasma membrane]\n",
+      "R-HSA-8863895 | R-HSA-168061  | TLR6 [plasma membrane]\n",
+      "R-HSA-8863895 | R-HSA-2559461 | TLR6/2 ligand:CD14:CD36 [plasma membrane]\n",
+      "R-HSA-8863895 | R-HSA-168949  | TLR6:TLR2 [plasma membrane]\n",
+      "R-HSA-8863895 | R-HSA-181410  | TLR6:TLR2:ligand:CD14:CD36 [plasma membrane]\n",
+      "R-HSA-8863895 | R-HSA-2201325 | activated TLR2/4:p-4Y-TIRAP:PI(4,5)P2:BTK [plasma membrane]\n",
+      "R-HSA-8863895 | R-HSA-937033  | oligo-MyD88:TIRAP:BTK:activated TLR [plasma membrane]\n",
+      "R-HSA-8863895 | R-HSA-2201321 | p-4Y-TIRAP [plasma membrane]\n",
+      "R-HSA-8863895 | R-HSA-5365824 | p-4Y-TIRAP:PI(4,5)P2 [plasma membrane]\n",
+      "R-HSA-8863895 | R-HSA-8863923 | p-S95-SNAP23 [phagocytic vesicle membrane]\n",
       "R-HSA-8863895 | R-NME-180815  | Major outer membrane protein P [extracellular region]\n",
-      "R-HSA-8863895 | R-ALL-180811  | Triacyl lipopeptide [extracellular region]\n",
-      "R-HSA-8863895 | R-HSA-197948  | BTK [cytosol]\n"
+      "R-HSA-8863895 | R-NME-180817  | PorB Homotrimer [extracellular region]\n",
+      "R-HSA-8863895 | R-NME-168944  | TLR1:TLR2 recognized ligand [extracellular region]\n"
      ]
     }
    ],
@@ -110,7 +110,7 @@
     "# Print sub-pathways under R-HSA-983169\n",
     "print('     Reaction | Participant   | Participant Name')\n",
     "print('--------------|---------------|----------------')\n",
-    "for data in _get_data():\n",
+    "for data in sorted(_get_data(), key=lambda r: [r['Participant'][:5], r['DisplayName']]):\n",
     "    print(\"{Reaction} | {Participant:13} | {DisplayName}\".format(**data))\n"
    ]
   },
