--- a/src/ipy/tutorial/s6b_reaction_participants.ipynb
+++ b/src/ipy/tutorial/s6b_reaction_participants.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Link to Reactome Knowledbase loaded into Neo4j\n",
+    "# Link to Reactome Knowledgebase loaded into Neo4j\n",
     "from neo4j import GraphDatabase\n",
     "\n",
     "neo4j_url = 'bolt://localhost:7687'\n",
