--- a/src/ipy/tutorial/fig4a_2018_molecules_in_interleukin_signaling.ipynb
+++ b/src/ipy/tutorial/fig4a_2018_molecules_in_interleukin_signaling.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,15 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Database| ID     | Name\n",
-      "--------|--------|------\n",
+      "223 molecules participate in \"Interleukin-4 and 13 signaling\":\n",
+      "\n",
+      "Database| ID              | Name\n",
+      "--------|-----------------|--------------------------\n",
       "ChEBI   | 16761           | ADP [cytosol]\n",
       "ChEBI   | 15422           | ATP [cytosol]\n",
       "ENSEMBL | ENSG00000142208 | AKT1 gene [nucleoplasm]\n",
@@ -293,8 +295,9 @@
     "\n",
     "data = _get_data()\n",
     "# Print sub-pathways under R-HSA-983169\n",
-    "print('Database| ID     | Name')\n",
-    "print('--------|--------|------')\n",
+    "print('{N} molecules participate in \"Interleukin-4 and 13 signaling\":\\n'.format(N=len(data)))\n",
+    "print('Database| ID              | Name')\n",
+    "print('--------|-----------------|--------------------------')\n",
     "for data in sorted(data, key=lambda r:[r['Database'], r['Name']]):\n",
     "    print(\"{Database:8}| {Identifier:15} | {Name}\".format(**data))"
    ]
