For readablity, split print into its own cells

--- a/src/ipy/tutorial/fig4b_2018_ccr5_pathways.ipynb
+++ b/src/ipy/tutorial/fig4b_2018_ccr5_pathways.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Step 2) CCR5 Pathways Query\n",
+    "\n",
+    "query = ('MATCH (p:Pathway)-[:hasEvent*]->(rle:ReactionLikeEvent), '\n",
+    "         '(rle)-[:input|output|catalystActivity|entityFunctionalStatus|physicalEntity|'\n",
+    "         'regulatedBy|regulator|hasComponent|hasMember|hasCandidate|repeatedUnit*]->(pe:PhysicalEntity), '\n",
+    "         '(pe)-[:referenceEntity]->(re:ReferenceEntity{identifier:\"P51681\"}), '\n",
+    "         '(re)-[:referenceDatabase]->(rd:ReferenceDatabase{displayName:\"UniProt\"}) '\n",
+    "         'RETURN DISTINCT p.stId AS Identifier, p.displayName AS Pathway')\n",
+    "\n",
+    "# Query and get the sub-pathways under R-HSA-983169\n",
+    "def _get_data():\n",
+    "    with gdbdr.session() as session:\n",
+    "        return [rec.data() for rec in session.run(query).records()]\n",
+    "\n",
+    "data = _get_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 3) Print Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,21 +99,6 @@
     }
    ],
    "source": [
-    "## Step 2) CCR5 Pathways Query\n",
-    "\n",
-    "query = ('MATCH (p:Pathway)-[:hasEvent*]->(rle:ReactionLikeEvent), '\n",
-    "         '(rle)-[:input|output|catalystActivity|entityFunctionalStatus|physicalEntity|'\n",
-    "         'regulatedBy|regulator|hasComponent|hasMember|hasCandidate|repeatedUnit*]->(pe:PhysicalEntity), '\n",
-    "         '(pe)-[:referenceEntity]->(re:ReferenceEntity{identifier:\"P51681\"}), '\n",
-    "         '(re)-[:referenceDatabase]->(rd:ReferenceDatabase{displayName:\"UniProt\"}) '\n",
-    "         'RETURN DISTINCT p.stId AS Identifier, p.displayName AS Pathway')\n",
-    "\n",
-    "# Query and get the sub-pathways under R-HSA-983169\n",
-    "def _get_data():\n",
-    "    with gdbdr.session() as session:\n",
-    "        return [rec.data() for rec in session.run(query).records()]\n",
-    "\n",
-    "data = _get_data()\n",
     "# Print sub-pathways under R-HSA-983169\n",
     "print(' ID           | Pathway Name')\n",
     "print('--------------|----------------------')\n",
