--- a/src/ipy/tutorial/s4b_pathway_superpathways.ipynb
+++ b/src/ipy/tutorial/s4b_pathway_superpathways.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,13 +32,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## Step 2) Query\n",
+    " ## Step 2a) Query Immediate Superpathways\n",
     " ### What superpathways are directly over pathway, R-HSA-983169, _Class I MHC mediated antigen processing & presentation_?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = ('MATCH (p:Pathway{stId:\"R-HSA-983169\"})<-[:hasEvent]-(sp:Pathway) '\n",
+    "         'RETURN '\n",
+    "         'p.stId AS Pathway, '\n",
+    "         'sp.stId AS SuperPathway_ID, '\n",
+    "         'sp.displayName as SuperPathway_Name')\n",
+    "\n",
+    "# Query and get the sub-pathways under R-HSA-983169\n",
+    "def _get_data():\n",
+    "    with gdbdr.session() as session:\n",
+    "        return [rec.data() for rec in session.run(query).records()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 2b) Print Immediate Superpathways"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +77,28 @@
     }
    ],
    "source": [
-    "query = ('MATCH (p:Pathway{stId:\"R-HSA-983169\"})<-[:hasEvent]-(sp:Pathway) '\n",
+    "# Print sub-pathways under R-HSA-983169\n",
+    "print('    Pathway      | SuperPathway ID | SuperPathway Name')\n",
+    "print('-----------------|-----------------|----------------')\n",
+    "for data in _get_data():\n",
+    "    print(\"    {Pathway} | {SuperPathway_ID:15} | {SuperPathway_Name}\".format(**data))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ## Step 3a) Query All Superpathways\n",
+    " ### Retrieve all superpathways directly over pathway, R-HSA-983169, _Class I MHC mediated antigen processing & presentation_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = ('MATCH (p:Pathway{stId:\"R-HSA-983169\"})<-[:hasEvent*]-(sp:Pathway) '\n",
     "         'RETURN '\n",
     "         'p.stId AS Pathway, '\n",
     "         'sp.stId AS SuperPathway_ID, '\n",
@@ -61,26 +107,19 @@
     "# Query and get the sub-pathways under R-HSA-983169\n",
     "def _get_data():\n",
     "    with gdbdr.session() as session:\n",
-    "        return [rec.data() for rec in session.run(query).records()]\n",
-    "    \n",
-    "# Print sub-pathways under R-HSA-983169\n",
-    "print('    Pathway      | SuperPathway ID | SuperPathway Name')\n",
-    "print('-----------------|-----------------|----------------')\n",
-    "for data in _get_data():\n",
-    "    print(\"    {Pathway} | {SuperPathway_ID:15} | {SuperPathway_Name}\".format(**data))\n"
+    "        return [rec.data() for rec in session.run(query).records()]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## Step 3) Query\n",
-    " ### Retrieve all superpathways directly over pathway, R-HSA-983169, _Class I MHC mediated antigen processing & presentation_"
+    "## Step 3b) Print All Superpathways"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -95,22 +134,11 @@
     }
    ],
    "source": [
-    "query = ('MATCH (p:Pathway{stId:\"R-HSA-983169\"})<-[:hasEvent*]-(sp:Pathway) '\n",
-    "         'RETURN '\n",
-    "         'p.stId AS Pathway, '\n",
-    "         'sp.stId AS SuperPathway_ID, '\n",
-    "         'sp.displayName as SuperPathway_Name')\n",
-    "\n",
-    "# Query and get the sub-pathways under R-HSA-983169\n",
-    "def _get_data():\n",
-    "    with gdbdr.session() as session:\n",
-    "        return [rec.data() for rec in session.run(query).records()]\n",
-    "    \n",
     "# Print sub-pathways under R-HSA-983169\n",
     "print('    Pathway      | SuperPathway ID | SuperPathway Name')\n",
     "print('-----------------|-----------------|----------------')\n",
-    "for data in _get_data():\n",
-    "    print(\"    {Pathway} | {SuperPathway_ID:15} | {SuperPathway_Name}\".format(**data))\n"
+    "for data in sorted(_get_data(), key=lambda d:d['SuperPathway_ID']):\n",
+    "    print(\"    {Pathway} | {SuperPathway_ID:15} | {SuperPathway_Name}\".format(**data))"
    ]
   },
   {
