--- a/src/ipy/tutorial/s6b_reaction_participants.ipynb
+++ b/src/ipy/tutorial/s6b_reaction_participants.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,31 @@
     " ## Step 2) Reaction Participant Query\n",
     " ### What are all the participants in the reaction, R-HSA-8863895, _IKKB phosphorylates SNAP23_?\n",
     "Reactions have inputs, outputs, catalysts and regulations, so to know the participants of a reaction, all these slots have to be taken into account. Please note that the physical entity acting as catalyst is stored in the _physicalEntity_ slot of the class _CatalystActivity_ and the one belonging to the regulation is stored in the _regulator_ slot of the _Regulation_ class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = ('MATCH (r:ReactionLikeEvent{stId:\"R-HSA-8863895\"})-[:'\n",
+    "         'input|output|catalystActivity|regulatedBy|'\n",
+    "         'physicalEntity|regulator|hasComponent|hasMember|hasCandidate*]'\n",
+    "         '->(pe:PhysicalEntity)'\n",
+    "         'RETURN DISTINCT r.stId AS Reaction, pe.stId as Participant, pe.displayName AS DisplayName')\n",
+    "\n",
+    "# Query all the participants in the reaction, R-HSA-8863895, IKKB phosphorylates SNAP23?\n",
+    "def _get_data():\n",
+    "    with gdbdr.session() as session:\n",
+    "        return [rec.data() for rec in session.run(query).records()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 3) Print"
    ]
   },
   {
@@ -96,22 +121,11 @@
     }
    ],
    "source": [
-    "query = ('MATCH (r:ReactionLikeEvent{stId:\"R-HSA-8863895\"})-[:'\n",
-    "         'input|output|catalystActivity|regulatedBy|'\n",
-    "         'physicalEntity|regulator|hasComponent|hasMember|hasCandidate*]'\n",
-    "         '->(pe:PhysicalEntity)'\n",
-    "         'RETURN DISTINCT r.stId AS Reaction, pe.stId as Participant, pe.displayName AS DisplayName')\n",
-    "\n",
-    "# Query and get the sub-pathways under R-HSA-983169\n",
-    "def _get_data():\n",
-    "    with gdbdr.session() as session:\n",
-    "        return [rec.data() for rec in session.run(query).records()]\n",
-    "    \n",
-    "# Print sub-pathways under R-HSA-983169\n",
+    "# Print all the participants in the reaction, R-HSA-8863895, IKKB phosphorylates SNAP23\n",
     "print('     Reaction | Participant   | Participant Name')\n",
     "print('--------------|---------------|----------------')\n",
     "for data in sorted(_get_data(), key=lambda r: [r['Participant'][:5], r['DisplayName']]):\n",
-    "    print(\"{Reaction} | {Participant:13} | {DisplayName}\".format(**data))\n"
+    "    print(\"{Reaction} | {Participant:13} | {DisplayName}\".format(**data))"
    ]
   },
   {
