--- a/src/ipy/tutorial/s7a_pathway_molecules.ipynb
+++ b/src/ipy/tutorial/s7a_pathway_molecules.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2) Pathway Molecules Query\n",
+    "# What are all the molecules in the pathway, R-HSA-983169, _Class I MHC mediated antigen processing & presentation_?\n",
+    "\n",
+    "query = ('MATCH (p:Pathway{stId:\"R-HSA-983169\"})-[:hasEvent*]->(rle:ReactionLikeEvent),'\n",
+    "         '(rle)-[:'\n",
+    "         'input|output|catalystActivity|regulatedBy|'\n",
+    "         'physicalEntity|regulator|hasComponent|hasMember|hasCandidate*'\n",
+    "         ']->(pe:PhysicalEntity),'\n",
+    "         '(pe)-[:referenceEntity]->(re:ReferenceEntity)-[:referenceDatabase]->(rd:ReferenceDatabase)'\n",
+    "         'RETURN DISTINCT '\n",
+    "         'pe.displayName AS Name, re.identifier AS Identifier, rd.displayName AS Database')\n",
+    "\n",
+    "# Query and get the sub-pathways under R-HSA-983169\n",
+    "def _get_data():\n",
+    "    with gdbdr.session() as session:\n",
+    "        return [rec.data() for rec in session.run(query).records()]\n",
+    "\n",
+    "data = _get_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 3) Print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1036,25 +1069,7 @@
     }
    ],
    "source": [
-    "## Step 2) Pathway Molecules Query\n",
-    "### What are all the molecules in the pathway, R-HSA-983169, _Class I MHC mediated antigen processing & presentation_?\n",
-    "\n",
-    "query = ('MATCH (p:Pathway{stId:\"R-HSA-983169\"})-[:hasEvent*]->(rle:ReactionLikeEvent),'\n",
-    "         '(rle)-[:'\n",
-    "         'input|output|catalystActivity|regulatedBy|'\n",
-    "         'physicalEntity|regulator|hasComponent|hasMember|hasCandidate*'\n",
-    "         ']->(pe:PhysicalEntity),'\n",
-    "         '(pe)-[:referenceEntity]->(re:ReferenceEntity)-[:referenceDatabase]->(rd:ReferenceDatabase)'\n",
-    "         'RETURN DISTINCT '\n",
-    "         'pe.displayName AS Name, re.identifier AS Identifier, rd.displayName AS Database')\n",
-    "\n",
-    "# Query and get the sub-pathways under R-HSA-983169\n",
-    "def _get_data():\n",
-    "    with gdbdr.session() as session:\n",
-    "        return [rec.data() for rec in session.run(query).records()]\n",
-    "\n",
-    "data = _get_data()\n",
-    "# Print sub-pathways under R-HSA-983169\n",
+    "# Print  all the molecules in the pathway, R-HSA-983169, Class I MHC mediated antigen processing & presentation\n",
     "print('Database| ID     | Name')\n",
     "print('--------|--------|------')\n",
     "for data in sorted(data, key=lambda r:[r['Database'], r['Name']]):\n",
