--- a/src/ipy/tutorial/s4a_pathway_subpathways.ipynb
+++ b/src/ipy/tutorial/s4a_pathway_subpathways.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = ('MATCH (p:Pathway{stId:\"R-HSA-983169\"})-[:hasEvent]->(sp:Pathway) '\n",
+    "         'RETURN '\n",
+    "         'p.stId AS Pathway, '\n",
+    "         'sp.stId AS SubPathway_ID, '\n",
+    "         'sp.displayName as SubPathway_Name')\n",
+    "\n",
+    "# Query and get the sub-pathways under R-HSA-983169\n",
+    "def _get_data():\n",
+    "    with gdbdr.session() as session:\n",
+    "        return [rec.data() for rec in session.run(query).records()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 3) Print Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -54,17 +79,6 @@
     }
    ],
    "source": [
-    "query = ('MATCH (p:Pathway{stId:\"R-HSA-983169\"})-[:hasEvent]->(sp:Pathway) '\n",
-    "         'RETURN '\n",
-    "         'p.stId AS Pathway, '\n",
-    "         'sp.stId AS SubPathway_ID, '\n",
-    "         'sp.displayName as SubPathway_Name')\n",
-    "\n",
-    "# Query and get the sub-pathways under R-HSA-983169\n",
-    "def _get_data():\n",
-    "    with gdbdr.session() as session:\n",
-    "        return [rec.data() for rec in session.run(query).records()]\n",
-    "    \n",
     "# Print sub-pathways under R-HSA-983169\n",
     "print('    Pathway      | SubPathway ID | SubPathway Name')\n",
     "print('-----------------|---------------|----------------')\n",
