--- a/src/ipy/tutorial/s6a_reaction_participants.ipynb
+++ b/src/ipy/tutorial/s6a_reaction_participants.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = ('MATCH (r:ReactionLikeEvent{stId:\"R-HSA-8863895\"})'\n",
+    "         '-[:input|output|catalystActivity|regulatedBy|physicalEntity|regulator*]'\n",
+    "         '->(pe:PhysicalEntity)'\n",
+    "         'RETURN DISTINCT r.stId AS Reaction, pe.stId as Participant, pe.displayName AS DisplayName')\n",
+    "\n",
+    "# Query the first level participants in the reaction, R-HSA-8863895, IKKB phosphorylates SNAP23\n",
+    "def _get_data():\n",
+    "    with gdbdr.session() as session:\n",
+    "        return [rec.data() for rec in session.run(query).records()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 3) Print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -58,21 +82,11 @@
     }
    ],
    "source": [
-    "query = ('MATCH (r:ReactionLikeEvent{stId:\"R-HSA-8863895\"})'\n",
-    "         '-[:input|output|catalystActivity|regulatedBy|physicalEntity|regulator*]'\n",
-    "         '->(pe:PhysicalEntity)'\n",
-    "         'RETURN DISTINCT r.stId AS Reaction, pe.stId as Participant, pe.displayName AS DisplayName')\n",
-    "\n",
-    "# Query and get the sub-pathways under R-HSA-983169\n",
-    "def _get_data():\n",
-    "    with gdbdr.session() as session:\n",
-    "        return [rec.data() for rec in session.run(query).records()]\n",
-    "    \n",
-    "# Print sub-pathways under R-HSA-983169\n",
+    "# Print the first level participants in the reaction, R-HSA-8863895, IKKB phosphorylates SNAP23\n",
     "print('     Reaction | Participant   | Participant Name')\n",
     "print('--------------|---------------|----------------')\n",
     "for data in sorted(_get_data(), key=lambda r: r['Participant']):\n",
-    "    print(\"{Reaction} | {Participant:13} | {DisplayName}\".format(**data))\n"
+    "    print(\"{Reaction} | {Participant:13} | {DisplayName}\".format(**data))"
    ]
   },
   {
